# tl.pypkg_copier

./: .pre-commit-config.yml  copier.yml
template/: .envrc  .pre-commit-config.yml  LICENSE.txt  README.rst  justfile  pyproject.toml
template/src/{{ package_name.replace('.', _copier_conf.sep) }}/: main.py
