[project]
name = "{{ package_name }}"
version = "0.1.0"
description = "{{ project_name }}: {{ project_description }}"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{ python_version }}",
    "Programming Language :: Python",
]
requires-python = ">={{ python_version }}"
dependencies = []

[project.scripts]
"{{ package_name }}" = "{{ package_name }}.main:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

[tool.uv.build-backend]
module-name = "{{ package_name }}"
