[project]
name = "{{ package_name }}"
version = "0.1.0"
authors = [
    {name="{{ author }}", email="{{ author_email }}"},
]
description = "{{ project_name }}: {{ project_description }}"
readme = "README.rst"
keywords = []
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{ python_version }}",
    "Programming Language :: Python",
]
requires-python = ">={{ python_version }}"
dependencies = []

[project.scripts]
"{{ package_name }}" = "{{ package_name }}.main:main"

[project.urls]
homepage = ""
source = ""
github = ""
download = ""
changelog = ""
releasenotes = ""
documentation = ""
issues = ""
funding = ""

[build-system]
build-backend = "uv_build"
requires = ["uv_build"]

[tool.uv.build-backend]
module-name = "{{ package_name }}"

[tool.ruff]
target-version = "py{{ python_version.replace('.', '') }}"
line-length = 110
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    # "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    # "A",
    # flake8-comprehensions
    # "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
    # mccabe
    # "C90",
    # pycodestyle
    # "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    # "UP",
    # ruff
    # "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.format]
preview = true
